--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">App Android Maps</string>
+    <string name="BtnIngresar">Ingresar</string>
+    <string name="Txtuser"></string>
+    <string name="TxtPassword"></string>
+
+    <string name="Btnregistrar">Registrar</string>
 </resources>
